<resources>
    <string name="app_name">FamilySocial</string>
    <string name="title_event">Date</string>
    <string name="title_birthday">Event</string>
    <string name="title_social">"Social "</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="string_problem">\???</string>
    <string name="format_date">%1$d %2$s %3$d</string>
    <string name="format_date_with_hour">%1$d %2$s %3$d, %4$d:%5$d</string>
    <string name="firstname_lastname_event">%1$s %2$s</string>
    <string name="format_date_without_year">%1$d %2$s</string>
    <string name="remaining_days">%1$dj</string>
    <string name="age_event">Aura %1$d an(s)</string>
    <string name="title_search">Search</string>
    <string name="title_add">Add</string>
    <string name="title_sort">Sort</string>
    <string name="other_event">Other event</string>
    <string name="bithday_event">Bithday event</string>
    <string name="birthday">Birthday</string>
    <string name="back">Back</string>
    <string name="add">Add</string>
    <string name="enter_the_birth_date">Enter the birth date</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="missing_information">Missing information</string>
    <string name="an_error_has_occurred">An error has occurred. Please try again</string>
    <string name="remaining_days_text">Remaining Days</string>
    <string name="name">Name</string>
    <string name="ascending_age">Ascending Age</string>
    <string name="descending_age">Descending Age</string>
    <string name="age">Age</string>
    <string name="enter_the_date">Enter the date</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="message_for_inscription">En vous inscrivant, vos données seront gardées même après la désinstallation de l\'application.</string>
    <string name="log_in_with_google">Log In With Google</string>

    <string name="error_no_internet">No internet connection</string>
    <string name="error_unknown_error">Failed authentication</string>
    <string name="error_email_not_found">Email not found</string>
    <string name="error_username_not_found">Username not found</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_msdcqscain">MsdcqscainActivity</string>
    <string name="enter_the_name">Enter the name</string>
    <string name="need_permission">Permission needed</string>
    <string name="missing_permission">Missing Permission</string>
    <string name="toast_title_no_image_chosen">No image was chosen</string>
    <string name="title_options">Options</string>
    <string name="enter_the_email">Enter the email</string>
    <string name="you_cannot_add_yourself">You cannot add yourself.</string>
    <string name="request_sent">Request sent.</string>
    <string name="remove_the_user_from_discussion">Remove the user from discussion</string>
    <string name="you_cannot_add_anyone">You cannot add anyone. You must own of the discussion.</string>
    <string name="you_are_the_owner_of_the_chat_this_action_will_permanently_delete_the_chat">You are the owner of the chat, this action will permanently delete the chat.</string>
    <string name="leave_the_discussion_group">Leave the discussion group ?</string>
    <string name="leave">Leave</string>
    <string name="title_discussions">Discussions</string>
    <string name="title_galleries">Galleries</string>
    <string name="title_request">Requests</string>
    <string name="requests_already_sent">Requests already sent.</string>
    <string name="logout">Logout</string>
    <string name="title_request_gallery">Gallery request</string>
    <string name="title_request_discussion">Discussion request</string>
    <string name="discussion_create">Discussion create !</string>
    <string name="name_update">Name update !</string>
</resources>
