<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/toolbar_add"
        android:icon="@drawable/ic_add"
        android:title="@string/title_add"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/toolbar_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/toolbar_requests_gallery"

        android:title="@string/title_request_gallery"
        app:showAsAction="never" />

    <item
        android:id="@+id/toolbar_requests_discussion"
        android:iconTint="@color/colorTextBlack"
        android:title="@string/title_request_discussion"
        app:showAsAction="never" />

    <item
        android:id="@+id/toolbar_logout"
        android:iconTint="@color/colorTextBlack"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>
