<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_discussions">

    <fragment
        android:id="@+id/navigation_galleries"
        android:label="@string/title_galleries"
        tools:layout="@layout/fragment_galleries" />

    <fragment
        android:id="@+id/navigation_discussions"
        android:label="@string/title_discussions"
        tools:layout="@layout/fragment_discussions" />

    <fragment
        android:id="@+id/navigation_birthday"
        android:label="@string/title_birthday"
        tools:layout="@layout/fragment_event" />
</navigation>
