<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:theme="@style/AppBottomSheetDialogTheme">

    <TextView
        android:layout_width="match_parent"
        android:textSize="22sp"
        android:textColor="@color/colorTextBlack"
        android:gravity="center"
        android:text="@string/remove_the_user_from_discussion"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/tick" />

        <Button
            android:id="@+id/bsd_confirm_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="?android:attr/selectableItemBackground"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/colorGreen"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:scaleType="centerCrop"
            android:src="@drawable/close" />

        <Button
            android:id="@+id/bsd_confirm_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="?android:attr/selectableItemBackground"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorRed"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>