<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/im_birthday_cake" />

        <Button
            android:id="@+id/alertdialog_sort_remaining_days"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/colorPrimary"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/remaining_days_text"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/im_calendar_event" />

        <Button
            android:id="@+id/alertdialog_sort_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/colorPrimary"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/name"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/im_champagne" />

        <Button
            android:id="@+id/alertdialog_sort_age_descending"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/colorPrimary"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/age"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</LinearLayout>